name:                ProdHaskellSeries
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ProdHaskellSeries#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    API
    Database
    Schema
  build-depends:       
    base >= 4.7 && < 5
    , aeson
    , monad-logger
    , mtl
    , persistent
    , persistent-postgresql
    , persistent-template
    , servant
    , servant-client
    , servant-server
    , transformers
    , text
    , warp
  default-language:    Haskell2010

executable migrate-db
  hs-source-dirs:      app
  main-is:             MigrateDB.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ProdHaskellSeries
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ProdHaskellSeries
